syntax = "proto3";
option java_multiple_files = true;
package com.example.awsecs.proto;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

message UserRequest {
  string userName = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc login(UserRequest) returns (LoginResponse);
}